--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Catoptica APP Video Demo</h1>
         <div class="video-container">
             <video controls>
-                <source src="/recorgind.mp4" type="video/mp4">
+                <source src="recorgind.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
